[package]
name = "kurzorisdead"
version = "0.0.1"
edition = "2021"
authors = ["Nobody"]
description = "Magic."
url = "https://github.com/jooni22/kurzor"

[dependencies]
uuid = { version = "1.4.1", features = ["v4"] }
directories = "5.0.1"
clap = { version = "4.4.6", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
